# LibRedex

./: .gitmodules  CMakeLists.txt  CMakePresets.json  build-all.sh
cmake/patches/: mariadb-connector-c-stdcall.patch
cmake/toolchains/: mingw-w64-i686.cmake
docs/: BUILD.md  SMOKE_TESTS.md
libredex/: build-all.sh  build-debian_stretch_amd64.sh  build-debian_stretch_i386.sh  build-debug-all.sh  build-windows.bat  cleanup.sh  debugbuild-windows.bat  generateeclipse.sh  rebuild.sh  redex.json
libredex/Source/: CMakeLists.txt  constants.hpp  extbase.hpp  logger.hpp  main.cpp  main.hpp  redex.cpp  redex.hpp  redex.rc
libredex/Source/TestApps/: dbinittest.cpp  echotest.cpp  test.py  testfileheader.hpp
libredex/Source/datetime/: datetime.cpp  datetime.hpp
libredex/Source/fileio/: fileio.cpp  fileio.hpp
libredex/Source/mysql/: mysql.cpp  mysql.hpp  mysql_binds.cpp  mysql_binds.hpp
libredex/Source/mysql/datacache/: charactermysql.cpp  charactermysql.hpp  objectmysql.cpp  objectmysql.hpp
libredex/Source/mysql/migration/: fulltables.hpp  includeAllSchemas.hpp  migration_0001.hpp  migration_0002.hpp
libredex/Source/randomlist/: discrete_randomlist.hpp  randomlist.cpp  randomlist.hpp
libredex/Source/rest/: handle_callback.cpp  handle_callback.hpp  http_connection.cpp  http_connection.hpp  http_server.hpp  restserver.cpp  restserver.hpp
libredex/Source/utils/: uuid.cpp  uuid.hpp
libredex/python/: example.py
libredex/python/interface/: extension.py  helper.py
